# learngit

./: .gitignore  README.md  Readme.txt
Controls/: .CMakeLists.txt.un~  .Controls.qrc.un~  .main.cpp.un~  CMakeLists.txt  Controls.qrc  main.cpp
Controls/res/qml/: .HSwipeView.qml.un~  .main.qml.un~  HDelayButton.qml  HDial.qml  HDialog.qml  HDrawer.qml  HMenu.qml  HMenuBar.qml  HOverlay.qml  HRangeSlider.qml  HScrollView.qml  HSpinBox.qml  HStackView.qml  HSwipeView.qml  HSwipeView2.qml  HSwitch.qml  HTabBar.qml  HToolTip.qml  main.qml
Model-View/: CMakeLists.txt  Model-View.qrc  main.cpp
Model-View/res/qml/: .Index_Model.qml.swo  .Index_Model.qml.swp  Array_Model.qml  Index_Model.qml  List_Model.qml  List_Model2.qml  main.qml
ch_01/: .CMakeList.txt.un~  .CMakeLists.txt.un~  .Readme.txt.un~  .ch_01.qrc.un~  .main.cpp.swp  .main.cpp.un~  .main.qml.un~  CMakeLists.txt  ch_01.qrc
ch_01/res/qml/: .main.qml.swp  .main.qml.un~  main.qml
ch_02/: .CMakeLists.txt.un~  .Readme.txt.un~  .Test.cpp.un~  .Test.h.un~  .ch_02.qrc.un~  .main.cpp.un~  CMakeLists.txt  Readme.txt  Test.cpp  Test.h  ch_02.qrc  ch_02.qrc~  main.cpp
ch_02/res/qml/: .main.qml.un~  main.qml  main.qml~
ch_03/: .CMakeLists.txt.un~  .ch_03.qrc.un~  .main.cpp.un~  CMakeLists.txt  main.cpp
ch_03/res/qml/: .main.qml.un~  main.qml
ch_04/: CMakeLists.txt  ch_04.qrc  main.cpp
ch_04/res/qml/: main.qml
